--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-media-capture": "^3.0.1",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-plugin-keyboard": "^2.2.1"
@@ -22,7 +24,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-media-capture": {}
     },
     "platforms": [
       "ios"
